changed regionTriggerHandler, some list Views

--- a/Project1VS/force-app/main/default/classes/regionTriggerHandler.cls
+++ b/Project1VS/force-app/main/default/classes/regionTriggerHandler.cls
@@ -1,16 +1,26 @@
 public class regionTriggerHandler {
     
     public static void checkStates(List<Region__c> regions) {
-        String states = null;
-        String regionstate = null;
+        String states = '';
+        String regionstate = '';
+        List<Id> realmIDs = new List<Id>();
+        List<Realm__c> realms = new List<Realm__c>();
         for (Region__c reg : regions) {
             regionstate = reg.states__c;
-            states = reg.Realm__r.includes_states__c;
-            if (!states.contains(regionstate)) {
-                reg.addError('This region must be in a state within the jurisdiction of this realm.');
+            realmIDs.add(reg.Realm__c);
+        }
+        realms = [SELECT name, includes_states__c, id FROM realm__c WHERE id IN : realmIDs];
+        for (Region__c reg : regions) {
+            for (Realm__c relm : realms) {
+                if (reg.realm__c == relm.id) {
+                    states = relm.includes_states__c;
+                    regionstate = reg.States__c;
+                    if (!states.contains(regionstate)) {
+                        reg.addError('This region must be in a state within the jurisdiction of this realm.');
+                    }
+                }
             }
         }
-        
     }
     
 }
