ready for demonstration

--- a/Project1VS/force-app/main/default/classes/DnDAPIMock.cls
+++ b/Project1VS/force-app/main/default/classes/DnDAPIMock.cls
@@ -2,8 +2,10 @@
 global class DnDAPIMock implements HttpCalloutMock{
     global HTTPResponse respond(HTTPRequest request){
         HttpResponse response = new HttpResponse();
+		request.setEndpoint('http://example.com/example/test');
+        request.setMethod('GET');
         response.setHeader('Content-Type', 'application/json');
-        response.setBody('{"count": 12, "results": [ {"index": "barbarian", "name": "Barbarian", "url": "/api/classes/barbarian" }, {"index": "bard","name": "Bard","url": "/api/classes/bard" }}]');
+        response.setBody('{"count": 12, "results": [ {"index": "barbarian", "name": "Barbarian", "url": "/api/classes/barbarian" }, {"index": "bard","name": "Bard","url": "/api/classes/bard" }]}');
 		response.setStatusCode(200);
         return response;
     }
