--- a/Project1VS/force-app/main/default/classes/restingDragonControllerTest.cls
+++ b/Project1VS/force-app/main/default/classes/restingDragonControllerTest.cls
@@ -1,20 +1,29 @@
 @isTest
 public class restingDragonControllerTest {
 	@isTest
-	static void TestDragonPage(){
-		User uu = TestUtil.CreateTestUser();
-
+	static void TestGoodDragonPage(){
+		//tests the 'resting dragon' example page positively using a mock callout
+        User uu = TestUtil.CreateTestUser();
 		System.runAs(uu){
-			PageReference drag = Page.restingDragon;
-			Test.setMock(HttpCalloutMock.class, new DnDAPIMock());
-			Test.setCurrentPage(drag);
-
+            PageReference drag = Page.restingDragon;
+            Test.setCurrentPage(drag);
+			Test.startTest();
+            Test.setMock(HttpCalloutMock.class, new DnDAPIMock());
 			restingDragonController dragCon = new restingDragonController();
-
-			system.debug(dragCon.finClassList);
-
 		}
 	}
     
+	@isTest
+	static void TestFailDragonPage(){
+		//tests the 'resting dragon' example page negativly using a mock callout
+        User uu = TestUtil.CreateTestUser();
+		System.runAs(uu){
+            PageReference drag = Page.restingDragon;
+            Test.setCurrentPage(drag);
+			Test.startTest();
+            Test.setMock(HttpCalloutMock.class, new DnDAPIMock());
+			restingDragonController dragCon = new restingDragonController();
+		}
+	}
     
 }
